--- a/5.1.3/Dockerfile
+++ b/5.1.3/Dockerfile
@@ -84,6 +84,6 @@ RUN cd /tmp && wget "http://museum.php.net/php5/php-$PHP_VERSION.tar.gz" \
 
 COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
 
-# TODO: copy final php.ini
+COPY ./php.ini /usr/local/lib/php.ini
 
 RUN ln -s /var/www /usr/local/apache2/htdocs
