Fix /var/www symlink for document root alias

--- a/5.1.3/Dockerfile
+++ b/5.1.3/Dockerfile
@@ -86,4 +86,4 @@ COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
 
 COPY ./php.ini /usr/local/lib/php.ini
 
-RUN ln -s /var/www /usr/local/apache2/htdocs
+RUN ln -s /usr/local/apache2/htdocs /var/www
