File does not exist. Update link.

--- a/5.1.3/Dockerfile
+++ b/5.1.3/Dockerfile
@@ -32,7 +32,7 @@ RUN apt-get install -y build-essential \
   mysql-client \
   ssmtp
 
-RUN cd /tmp && wget https://www.apache.org/dist/httpd/httpd-2.2.31.tar.gz \
+RUN cd /tmp && wget http://archive.apache.org/dist/httpd/httpd-2.2.31.tar.gz \
   && tar xzvf httpd-2.2.31.tar.gz \
   && /usr/local/apache2/bin/apxs -c -i /tmp/httpd-2.2.31/modules/mappers/mod_rewrite.c
 
